// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isFullScreen 1`] = `
<div
  className="mapScaleControl mapScaleControlFullScreen"
  style={
    Object {
      "width": "57.043113184945184px",
    }
  }
>
  ~50 km
</div>
`;

exports[`render 1`] = `
<div
  className="mapScaleControl"
  style={
    Object {
      "width": "57.043113184945184px",
    }
  }
>
  ~50 km
</div>
`;
